# apache_web_logs

./: .gitignore  README.md  analysis.ipynb  apache_datapipeline.py  dashboard.py  datapipeline.py  extract_load.py  main.py  pyproject.toml  transform_load.py
src/: apache_datapipeline.py  datapipeline.py  extract_load.py  transform_load.py
